disks/pc/dos/compaq/3.00/README.md
---
layout: page
title: COMPAQ MS-DOS 3.00
permalink: /disks/pc/dos/compaq/3.00/
---

COMPAQ MS-DOS 3.00
---

Released in 1985 by COMPAQ Computer Corp, this version of MS-DOS displays the following messages on boot:

	The COMPAQ Personal Computer MS-DOS
	Version 3.00
	
	(C) Copyright COMPAQ Computer Corp. 1982, 1983, 1984, 1985
	(C) Copyright Microsoft Corp. 1981, 1982, 1983, 1984, 1985

Directory listings of the distribution diskettes are provided below.  Thanks (again) to the
[OS/2 Museum](http://www.os2museum.com/) for sharing these disks with us.

### Directory of COMPAQ MS-DOS 3.00 (Startup)

	 Volume in drive A has no label

	Directory of A:\

	IBMBIO   COM      9216 04-22-85  12:00p
	IBMDOS   COM     27856 04-22-85  12:00p
	COMMAND  COM     22747 04-22-85  12:00p
	VDISK    SYS      2483 04-22-85  12:00p
	ANSI     SYS      1593 04-22-85  12:00p
	ENHDISK  SYS      1547 04-22-85  12:00p
	CLOCK    SYS      1045 04-22-85  12:00p
	FORMAT   COM      8427 04-22-85  12:00p
	CHKDSK   COM      9419 04-22-85  12:00p
	SYS      COM      3791 04-22-85  12:00p
	DISKCOMP COM      2834 04-22-85  12:00p
	DISKCOPY COM      2958 04-22-85  12:00p
	COMP     COM      2470 04-22-85  12:00p
	MODE     COM      3973 04-22-85  12:00p
	FDISK    COM      6688 04-22-85  12:00p
	BACKUP   COM      5481 04-22-85  12:00p
	RESTORE  COM      5484 04-22-85  12:00p
	ASSIGN   COM      1509 04-22-85  12:00p
	SORT     EXE      1632 04-22-85  12:00p
	FIND     EXE      6403 04-22-85  12:00p
	MORE     COM       282 04-22-85  12:00p
	PRINT    COM      8147 04-22-85  12:00p
	TREE     COM      1752 04-22-85  12:00p
	LABEL    COM      1237 04-22-85  12:00p
	BASIC    COM      1175 04-22-85  12:00p
	BASICA   COM      1173 04-22-85  12:00p
	BASICA   EXE     66464 04-22-85  12:00p
	GRAPHICS COM      3048 04-22-85  12:00p
	EDLIN    COM      7183 04-22-85  12:00p
	SHARE    EXE      8640 04-22-85  12:00p
	ATTRIB   EXE     15220 04-22-85  12:00p
	SELECT   COM      1714 04-22-85  12:00p
	KEYBGR   COM      7799 04-22-85  12:00p
	KEYBFR   COM      7869 04-22-85  12:00p
	KEYBUK   COM      7257 04-22-85  12:00p
	KEYBIT   COM      7474 04-22-85  12:00p
	KEYBSP   COM      7864 04-22-85  12:00p
	GRAFTABL COM      1130 04-22-85  12:00p
	DISKINIT COM      9159 04-22-85  12:00p
	       39 file(s)     292143 bytes

	Total files listed:
	       39 file(s)     292143 bytes
	                       50176 bytes free

### Directory of COMPAQ MS-DOS 3.00 (Supp)

	 Volume in drive A has no label

	Directory of A:\

	SETCLOCK COM      2773 04-22-85  12:00p
	TAPE     EXE     28146 04-22-85  12:00p
	BASICA   COM      1173 04-22-85  12:00p
	SUBST    EXE     16548 04-22-85  12:00p
	JOIN     EXE     15844 04-22-85  12:00p
	EXE2BIN  EXE      2768 04-22-85  12:00p
	LINK     EXE     38422 04-22-85  12:00p
	DEBUG    COM     15354 04-22-85  12:00p
	RECOVER  COM      4226 04-22-85  12:00p
	CMPQADAP COM     21766 04-22-85  12:00p
	GRAFTABL COM      1130 04-22-85  12:00p
	DEMO     BAT        14 04-22-85  12:00p
	DEMO     BAS      6528 04-22-85  12:00p
	DEMO1    BAS     16107 04-22-85  12:00p
	DEMO2    BAS     16224 04-22-85  12:00p
	DEMO3    BAS     26140 04-22-85  12:00p
	DEMO4    BAS      6069 04-22-85  12:00p
	USA      DAT     16128 04-22-85  12:00p
	EUROPE   DAT     16008 04-22-85  12:00p
	INTEREST BAS       384 04-22-85  12:00p
	WORDS             1306 04-22-85  12:00p
	       21 file(s)     253058 bytes

	Total files listed:
	       21 file(s)     253058 bytes
	                       98304 bytes free

[Return to [COMPAQ MS-DOS Disks](/disks/pc/dos/compaq/)]
